--- a/cp-plaintext/confluent-platform-licensed.yaml
+++ b/cp-plaintext/confluent-platform-licensed.yaml
@@ -10,7 +10,7 @@ spec:
     application: confluentinc/cp-zookeeper:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
   license:
-    secretRef: confluent-license
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   logVolumeCapacity: 1Gi
 ---
@@ -25,7 +25,7 @@ spec:
     application: confluentinc/cp-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
   license:
-    secretRef: confluent-license
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   metricReporter:
     enabled: true
@@ -50,12 +50,20 @@ spec:
   image:
     application: confluentinc/cp-server-connect:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  build:
+    type: onDemand
+    onDemand:
+      plugins:
+        locationType: confluentHub
+        confluentHub:
+          - name: kafka-connect-datagen
+            owner: confluentinc
+            version: 0.5.2
   license:
-    secretRef: confluent-license
+    globalLicense: true
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
-
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: KsqlDB
@@ -68,7 +76,7 @@ spec:
     application: confluentinc/cp-ksqldb-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
   license:
-    secretRef: confluent-license
+    globalLicense: true
   dataVolumeCapacity: 1Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
@@ -83,7 +91,7 @@ spec:
     application: confluentinc/cp-enterprise-control-center:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
   license:
-    secretRef: confluent-license
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   dependencies:
     schemaRegistry:
@@ -107,18 +115,9 @@ spec:
     application: confluentinc/cp-schema-registry:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
   license:
-    secretRef: confluent-license
----
-apiVersion: platform.confluent.io/v1beta1
-kind: SchemaRegistry
-metadata:
-  name: schemareg-target
-  namespace: confluent
-spec:
-  replicas: 1
-  enableSchemaExporter: true
-  image:
-    application: confluentinc/cp-schema-registry:7.2.0
-    init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
+    globalLicense: true
+  externalAccess:
+    type: nodePort
+    nodePort:
+      host: schemaregistry.confluent.svc.cluster.local
+      nodePortOffset: 30200  
