--- a/cp-plaintext/confluent-platform.yaml
+++ b/cp-plaintext/confluent-platform.yaml
@@ -9,8 +9,6 @@ spec:
   image:
     application: confluentinc/cp-zookeeper:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
   dataVolumeCapacity: 1Gi
   logVolumeCapacity: 1Gi
 ---
@@ -24,8 +22,6 @@ spec:
   image:
     application: confluentinc/cp-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
   dataVolumeCapacity: 1Gi
   metricReporter:
     enabled: true
@@ -50,12 +46,18 @@ spec:
   image:
     application: confluentinc/cp-server-connect:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
+  build:
+    type: onDemand
+    onDemand:
+      plugins:
+        locationType: confluentHub
+        confluentHub:
+          - name: kafka-connect-datagen
+            owner: confluentinc
+            version: 0.5.2
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
-
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: KsqlDB
@@ -67,8 +69,6 @@ spec:
   image:
     application: confluentinc/cp-ksqldb-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
   dataVolumeCapacity: 1Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
@@ -82,8 +82,6 @@ spec:
   image:
     application: confluentinc/cp-enterprise-control-center:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
   dataVolumeCapacity: 1Gi
   dependencies:
     schemaRegistry:
@@ -105,5 +103,8 @@ spec:
   image:
     application: confluentinc/cp-schema-registry:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
-  license:
-    secretRef: confluent-license
+  # externalAccess:
+  #   type: nodePort
+  #   nodePort:
+  #     host: schemaregistry.confluent.svc.cluster.local
+  #     nodePortOffset: 30200  
