--- a/datadog/values.yaml
+++ b/datadog/values.yaml
@@ -30,7 +30,7 @@ datadog:
   # datadog.apiKey -- Your Datadog API key
 
   ## ref: https://app.datadoghq.com/account/settings#agent/kubernetes
-  apiKey: b6924d764285109f9efa1ad711282b78
+  apiKey: # <API KEY HERE>
 
   # datadog.apiKeyExistingSecret -- Use existing Secret which stores API key instead of creating a new one. The value should be set with the `api-key` key inside the secret.
 
