--- a/cp-plaintext/confluent-platform.yaml
+++ b/cp-plaintext/confluent-platform.yaml
@@ -1,4 +1,9 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: confluent
+---
 apiVersion: platform.confluent.io/v1beta1
 kind: Zookeeper
 metadata:
@@ -9,6 +14,8 @@ spec:
   image:
     application: confluentinc/cp-zookeeper:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  license:
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   logVolumeCapacity: 1Gi
 ---
@@ -22,6 +29,8 @@ spec:
   image:
     application: confluentinc/cp-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  license:
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   metricReporter:
     enabled: true
@@ -55,6 +64,8 @@ spec:
           - name: kafka-connect-datagen
             owner: confluentinc
             version: 0.5.2
+  license:
+    globalLicense: true
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
@@ -69,6 +80,8 @@ spec:
   image:
     application: confluentinc/cp-ksqldb-server:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  license:
+    globalLicense: true
   dataVolumeCapacity: 1Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
@@ -82,6 +95,8 @@ spec:
   image:
     application: confluentinc/cp-enterprise-control-center:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  license:
+    globalLicense: true
   dataVolumeCapacity: 1Gi
   dependencies:
     schemaRegistry:
@@ -100,9 +115,12 @@ metadata:
   namespace: confluent
 spec:
   replicas: 1
+  enableSchemaExporter: true
   image:
     application: confluentinc/cp-schema-registry:7.2.0
     init: confluentinc/confluent-init-container:2.4.0
+  license:
+    globalLicense: true
   # externalAccess:
   #   type: nodePort
   #   nodePort:
