--- a/kraft/cp-kraft-tls.yaml
+++ b/kraft/cp-kraft-tls.yaml
@@ -19,6 +19,7 @@ spec:
     server:
       - default.replication.factor=3
       - min.insync.replicas=2
+      - confluent.schema.registry.url=http://schemaregistry.confluent.svc.cluster.local:8081
       # - authorizer.class.name=org.apache.kafka.metadata.authorizer.StandardAuthorizer
       # - allow.everyone.if.no.acl.found=true
   tls:
@@ -53,6 +54,8 @@ spec:
           enabled: true
       clusterRef:
         name: kraftcontroller
+    schemaRegistry:
+      url: http://schemaregistry.confluent.svc.cluster.local:8081
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: Connect
