--- a/cp-plaintext/cp-3-3-1.yaml
+++ b/cp-plaintext/cp-3-3-1.yaml
@@ -5,7 +5,8 @@ metadata:
   name: zookeeper
   namespace: confluent
 spec:
-  replicas: 1
+  replicas: 3
+  oneReplicaPerNode: true
   image:
     application: confluentinc/cp-zookeeper:7.6.1
     init: confluentinc/confluent-init-container:2.8.2
@@ -20,7 +21,8 @@ metadata:
   name: kafka
   namespace: confluent
 spec:
-  replicas: 1
+  replicas: 3
+  oneReplicaPerNode: true
   image:
     application: confluentinc/cp-server:7.6.1
     init: confluentinc/confluent-init-container:2.8.2
@@ -29,15 +31,6 @@ spec:
   dataVolumeCapacity: 1Gi
   metricReporter:
     enabled: true
-  configOverrides:
-    server:
-      - offsets.topic.replication.factor=1
-      - transaction.state.log.replication.factor=1
-      - confluent.license.topic.replication.factor=1
-      - confluent.metadata.topic.replication.factor=1
-      - confluent.balancer.topic.replication.factor=1
-      - confluent.metrics.reporter.topic.replicas=1
-      - confluent.security.event.logger.exporter.kafka.topic.replicas=1
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: Connect
@@ -64,20 +57,6 @@ spec:
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
----
-apiVersion: platform.confluent.io/v1beta1
-kind: KsqlDB
-metadata:
-  name: ksqldb
-  namespace: confluent
-spec:
-  replicas: 1
-  image:
-    application: confluentinc/cp-ksqldb-server:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
-  license:
-    globalLicense: true
-  dataVolumeCapacity: 1Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: ControlCenter
