--- a/cp-plaintext/cp-noksql-lb.yaml
+++ b/cp-plaintext/cp-noksql-lb.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-zookeeper:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
+    application: confluentinc/cp-zookeeper:7.2.0
+    init: confluentinc/confluent-init-container:2.4.0
   license:
     globalLicense: true
   dataVolumeCapacity: 1Gi
@@ -22,13 +22,22 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-server:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
+    application: confluentinc/cp-server:7.2.0
+    init: confluentinc/confluent-init-container:2.4.0
   license:
     globalLicense: true
   dataVolumeCapacity: 1Gi
   metricReporter:
     enabled: true
+  listeners:
+      external:
+        externalAccess:
+          type: loadBalancer
+          loadBalancer:
+            domain: schmitzi.internal
+            bootstrapPrefix: kafka
+            brokerPrefix: broker
+            advertisedPort: 9092
   configOverrides:
     server:
       - offsets.topic.replication.factor=1
@@ -48,8 +57,8 @@ spec:
   replicas: 1
   internalTopicReplicationFactor: 1
   image:
-    application: confluentinc/cp-server-connect:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
+    application: confluentinc/cp-server-connect:7.2.0
+    init: confluentinc/confluent-init-container:2.4.0
   build:
     type: onDemand
     onDemand:
@@ -66,20 +75,6 @@ spec:
       bootstrapEndpoint: kafka:9071
 ---
 apiVersion: platform.confluent.io/v1beta1
-kind: KsqlDB
-metadata:
-  name: ksqldb
-  namespace: confluent
-spec:
-  replicas: 1
-  image:
-    application: confluentinc/cp-ksqldb-server:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
-  license:
-    globalLicense: true
-  dataVolumeCapacity: 1Gi
----
-apiVersion: platform.confluent.io/v1beta1
 kind: ControlCenter
 metadata:
   name: controlcenter
@@ -88,10 +83,14 @@ spec:
   replicas: 1
   internalTopicReplicatorFactor: 1
   image:
-    application: confluentinc/cp-enterprise-control-center:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
+    application: confluentinc/cp-enterprise-control-center:7.2.0
+    init: confluentinc/confluent-init-container:2.4.0
   license:
     globalLicense: true
+  # externalAccess:
+  #   type: loadBalancer
+  #   loadBalancer:
+  #     domain: schmitzi.internal
   dataVolumeCapacity: 1Gi
   dependencies:
     schemaRegistry:
@@ -112,7 +111,7 @@ spec:
   replicas: 1
   enableSchemaExporter: true
   image:
-    application: confluentinc/cp-schema-registry:7.6.1
-    init: confluentinc/confluent-init-container:2.8.2
+    application: confluentinc/cp-schema-registry:7.2.0
+    init: confluentinc/confluent-init-container:2.4.0
   license:
     globalLicense: true
