Credentials and RBAC fixed.

--- a/cp-rbac-ldap/openldap.yaml
+++ b/cp-rbac-ldap/openldap.yaml
@@ -265,6 +265,8 @@ metadata:
     app: ldap
 spec:
   ports:
+  - port: 389
+    name: ldap
   - port: 636
     name: ldaps
   publishNotReadyAddresses: false
