Remaining CP components added, RBAC adapted.

--- a/cp-rbac-ldap/cp-noTLS.yaml
+++ b/cp-rbac-ldap/cp-noTLS.yaml
@@ -52,7 +52,7 @@ spec:
       - confluent.authorizer.init.timeout.ms=600000
       - default.replication.factor=3
       - min.insync.replicas=2
-      - ldap.refresh.interval.ms=10000
+      - ldap.refresh.interval.ms=15000
     log4j:
       - log4j.logger.io.confluent.rest-utils=DEBUG, stdout
       - log4j.additivity.io.confluent.rest-utils=false
@@ -149,17 +149,6 @@ spec:
             userSearchBase: DC=confluent,DC=demo,DC=org
             userSearchFilter: (|(objectClass=inetOrgPerson)(objectClass=account))
             userSearchScope: 2
-            # groupMemberAttribute: memberUid
-            # groupMemberAttributePattern: cn=(.*),ou=users,dc=test,dc=com
-            # groupNameAttribute: cn
-            # groupObjectClass: posixGroup
-            # groupSearchBase: OU=groups,DC=test,DC=com
-            # groupSearchScope: 2
-            # userMemberOfAttributePattern: cn=(.*),ou=users,.*
-            # userNameAttribute: cn
-            # userObjectClass: organizationalRole
-            # userSearchBase: OU=users,DC=test,DC=com
-            # userSearchScope: 1
           tls:
             enabled: false
         type: ldap
@@ -184,6 +173,147 @@ spec:
       type: bearer
       bearer:
         secretRef: rest-credential
+---
+apiVersion: platform.confluent.io/v1beta1
+kind: SchemaRegistry
+metadata:
+  name: schemaregistry
+  namespace: confluent
+spec:
+  replicas: 1
+  image:
+    application: confluentinc/cp-schema-registry:7.9.1
+    init: confluentinc/confluent-init-container:2.11.1
+  # tls:
+    # secretRef: tls-schemaregistry
+  authorization:
+    type: rbac
+  dependencies:
+    kafka:
+      bootstrapEndpoint: kafka.confluent.svc.cluster.local:9071
+      authentication:
+        type: plain
+        jaasConfig:
+          secretRef: credentials
+      tls:
+        enabled: false
+    mds:
+      endpoint: http://kafka.confluent.svc.cluster.local:8090
+      tokenKeyPair:
+        secretRef: mds-token
+      authentication:
+        type: bearer
+        bearer:
+          secretRef: mds-client-sr
+      tls:
+        enabled: false
+---
+apiVersion: platform.confluent.io/v1beta1
+kind: Connect
+metadata:
+  name: connect
+  namespace: confluent
+spec:
+  replicas: 1
+  image:
+    application: confluentinc/cp-server-connect:7.9.1
+    init: confluentinc/confluent-init-container:2.11.1
+  # tls:
+  #   secretRef: tls-connect
+  authorization:
+    type: rbac
+  dependencies:
+    kafka:
+      bootstrapEndpoint: kafka.confluent.svc.cluster.local:9071
+      authentication:
+        type: plain
+        jaasConfig:
+          secretRef: credentials
+      tls:
+        enabled: false
+    mds:
+      endpoint: http://kafka.confluent.svc.cluster.local:8090
+      tokenKeyPair:
+        secretRef: mds-token
+      authentication:
+        type: bearer
+        bearer:
+          secretRef: mds-client-connect
+      tls:
+        enabled: false
+---
+apiVersion: platform.confluent.io/v1beta1
+kind: KafkaRestProxy
+metadata:
+  name: kafkarestproxy
+  namespace: confluent
+spec:
+  replicas: 1
+  image:
+    application: confluentinc/cp-kafka-rest:7.9.1
+    init: confluentinc/confluent-init-container:2.11.1
+  # tls:
+  #   secretRef: tls-kafkarestproxy
+  authorization:
+    type: rbac
+  dependencies:
+    kafka:
+      bootstrapEndpoint: kafka.confluent.svc.cluster.local:9071
+      authentication:
+        type: plain
+        jaasConfig:
+          secretRef: credentials
+      tls:
+        enabled: false
+    mds:
+      endpoint: http://kafka.confluent.svc.cluster.local:8090
+      tokenKeyPair:
+        secretRef: mds-token
+      authentication:
+        type: bearer
+        bearer:
+          secretRef: mds-client-krp
+      tls:
+        enabled: false
+    schemaRegistry:
+      url: http://schemaregistry.confluent.svc.cluster.local:8081
+      tls:
+        enabled: false
+---
+apiVersion: platform.confluent.io/v1beta1
+kind: KsqlDB
+metadata:
+  name: ksqldb
+  namespace: confluent
+spec:
+  replicas: 1
+  image:
+    application: confluentinc/cp-ksqldb-server:7.9.1
+    init: confluentinc/confluent-init-container:2.11.1
+  dataVolumeCapacity: 10Gi
+  authorization:
+    type: rbac
+  # tls:
+  #   secretRef: tls-ksql
+  dependencies:
+    kafka:
+      bootstrapEndpoint: kafka.confluent.svc.cluster.local:9071
+      authentication:
+        type: plain
+        jaasConfig:
+          secretRef: credentials
+      tls:
+        enabled: false
+    mds:
+      endpoint: http://kafka.confluent.svc.cluster.local:8090
+      tokenKeyPair:
+        secretRef: mds-token
+      authentication:
+        type: bearer
+        bearer:
+          secretRef: mds-client-ksql
+      tls:
+        enabled: false
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: ControlCenter
@@ -235,6 +365,20 @@ spec:
           secretRef: alertmanager-client-creds
       tls:
         enabled: false
+    schemaRegistry:
+      url: http://schemaregistry.confluent.svc.cluster.local:8081
+      tls:
+        enabled: false
+    connect:
+      - name: connect
+        url:  http://connect.confluent.svc.cluster.local:8083
+        tls:
+          enabled: false
+    ksqldb:
+      - name: ksqldb
+        url:  http://ksqldb.confluent.svc.cluster.local:8088
+        tls:
+          enabled: false
   services:
     prometheus:
        image: confluentinc/cp-enterprise-prometheus:2.0.0
