--- a/ingress/cp-kraft.yaml
+++ b/ingress/cp-kraft.yaml
@@ -9,8 +9,8 @@ spec:
   oneReplicaPerNode: true
   dataVolumeCapacity: 1G
   image:
-    application: docker.io/confluentinc/cp-server:7.5.1
-    init: confluentinc/confluent-init-container:2.7.1
+    application: docker.io/confluentinc/cp-server:7.5.3
+    init: confluentinc/confluent-init-container:2.7.3
   configOverrides:
     server:
       - default.replication.factor=3
@@ -26,8 +26,8 @@ spec:
   replicas: 3
   oneReplicaPerNode: true
   image:
-    application: confluentinc/cp-server:7.5.1
-    init: confluentinc/confluent-init-container:2.7.1
+    application: confluentinc/cp-server:7.5.3
+    init: confluentinc/confluent-init-container:2.7.3
   license:
     globalLicense: true
   dataVolumeCapacity: 1Gi
@@ -55,8 +55,8 @@ spec:
   replicas: 1
   internalTopicReplicatorFactor: 1
   image:
-    application: confluentinc/cp-enterprise-control-center:7.5.1
-    init: confluentinc/confluent-init-container:2.7.1
+    application: confluentinc/cp-enterprise-control-center:7.5.3
+    init: confluentinc/confluent-init-container:2.7.3
   license:
     globalLicense: true
   dataVolumeCapacity: 1Gi
@@ -76,18 +76,20 @@ metadata:
   namespace: confluent
 spec:
   replicas: 1
-  enableSchemaExporter: true
+  enableSchemaExporter: false
   image:
-    application: confluentinc/cp-schema-registry:7.5.1
-    init: confluentinc/confluent-init-container:2.7.1
+    application: confluentinc/cp-schema-registry:7.5.3
+    init: confluentinc/confluent-init-container:2.7.3
   license:
     globalLicense: true
   configOverrides:
     server:
       # activates CSFLE KEK/DEK registry
-      - resource.extension.class=io.confluent.dekregistry.DekRegistryResourceExtension 
+      # - resource.extension.class=io.confluent.dekregistry.DekRegistryResourceExtension 
       # activates Data Contracts
-      # - resource.extension.class=io.confluent.kafka.schemaregistry.rulehandler.RuleSetResourceExtension
+      #- resource.extension.class=io.confluent.kafka.schemaregistry.rulehandler.RuleSetResourceExtension
+      # use both:
+      - resource.extension.class=io.confluent.dekregistry.DekRegistryResourceExtension,io.confluent.kafka.schemaregistry.rulehandler.RuleSetResourceExtension
 ---
 apiVersion: platform.confluent.io/v1beta1
 kind: Connect
@@ -97,8 +99,8 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-server-connect:7.5.1
-    init: confluentinc/confluent-init-container:2.7.1
+    application: confluentinc/cp-server-connect:7.5.3
+    init: confluentinc/confluent-init-container:2.7.3
   license:
     globalLicense: true
 ---
